--- a/report/sections/3_code.tex
+++ b/report/sections/3_code.tex
@@ -61,4 +61,4 @@ Cette classe permet de comparer les algorithmes de recherche par heuristique et 
 \end{itemize}
 
 \section{Heuristics.playground}
-
+Le fichier \texttt{Heuristics.playground} va permettre d'utiliser la classe \texttt{Statistics} afin d'effectuer des analyse d'heuristiques et des parcours de graphe. Il peut être améliorer afin d'afficher le composant graphique \texttt{StatUI} et d'effectuer l'animation de parcours des algorithmes comme sur l'application SwiftUI. On peut également l'utiliser pour faire un rapport en bonne et dû forme avec nos résultats.
