--- a/report/report.tex
+++ b/report/report.tex
@@ -55,5 +55,6 @@
 \subfile{sections/2_environment.tex}
 \subfile{sections/3_code.tex}
 \subfile{sections/4_heuristics.tex}
+\subfile{sections/5_conclusion.tex}
 
 \end{document}
