--- a/report/sections/2_environment.tex
+++ b/report/sections/2_environment.tex
@@ -1,9 +1,9 @@
-\chapter{Environment}
+\chapter{Environnement}
 
 \section{Swift}
 Le choix s'est porté sur le langage d'Apple, Swift, pour la réalisation de ce projet. C'est un langage de programmation moderne, puissant et facile à apprendre. Il est conçu pour être sûr, performant et expressif. Swift est un langage de programmation multi-paradigme, qui supporte le paradigme impératif, le paradigme fonctionnel et le paradigme orienté objet.
 
-Ce langage s'est donc imposé comme le choix idéal pour ce projet, car il permet de développer des applications performante et facilement portable sur les différents systèmes d'exploitation d'Apple.
+Ce langage s'est donc imposé comme le choix idéal pour ce projet, car il permet de développer des applications performantes et facilement portables sur les différents systèmes d'exploitation d'Apple.
 
 \section{SwiftUI}
 SwiftUI est un framework de développement d'interface graphique pour les applications iOS, macOS, watchOS et tvOS. Il permet de créer des interfaces graphiques de manière déclarative, et de les mettre à jour automatiquement lorsqu'un changement est détecté. Il est possible de créer des interfaces graphiques en utilisant des composants prédéfinis, ou de créer ses propres composants.
