--- a/report/sections/1_introduction.tex
+++ b/report/sections/1_introduction.tex
@@ -1,14 +1,14 @@
 \chapter{Introduction}
 
 \section{Description du projet}
-“Gaps Solitaire” est un jeu de cartes, également connue sous le nom de “Montana Solitaire” et des “Quatre jeudis” à cause de sa difficulté. L'objectif du jeu est d'organiser les cartes séquentiellement et par couleur, de l'as à la dame, en déplaçant les cartes dans quatre espace initialement choisis au hasard. Une carte peut être déplacée vers un espace vide si et seulement si elle est de la même couleur et directement supérieure à la carte située à gauche du dit espace.
+“Gaps Solitaire” est un jeu de cartes, également connue sous le nom de “Montana Solitaire” et des “Quatre jeudis” à cause de sa difficulté. L'objectif du jeu est d'organiser les cartes séquentiellement et par couleur, de l'as à la dame, en déplaçant les cartes dans quatre espaces initialement choisis au hasard. Une carte peut être déplacée vers un espace vide si et seulement si elle est de la même couleur et directement supérieure à la carte située à gauche du dit espace.
 
 Il existe plusieurs sites pour jouer en ligne, comme par exemple \url{https://www.jeuxsolitaire.fr/jeu/Gaps+Solitaire}.
 
 “Gaps Solitaire” est un jeu très difficile à terminer, et contrairement à la majorité des jeux de patience requiert beaucoup de stratégie.
 
 \section{Objectifs}
-L'objectif du projet P3 est de développer un moteur permettant de placer le plus de cartes possible à partir de toute configuration initiale des cartes. Ce projet vous permettra de vous familiariser et d’approfondir les concepts suivants:
+L'objectif du projet P3 est de développer un moteur permettant de placer le plus de cartes possible à partir de toute configuration initiale des cartes. Le moteur doit être capable de jouer seul, sans intervention de l'utilisateur, et de trouver la meilleure solution possible. Voici les sujets abordés dans le cadre du projet :
 
 \begin{itemize}
     \item Structures de données pour modéliser le jeu et les coups possibles
